# TruckDevil

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  RELEASING.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  publish.yml
tests/: README.md  conftest.py  test_ecu.py  test_framework_cli.py  test_fuzzer_target.py  test_j1939_integration.py  test_module_ecu_discovery.py  test_module_j1939_fuzzer.py  test_module_read_messages.py  test_module_send_messages.py  test_package_resources.py  test_pretty_shim.py
truckdevil/: __init__.py  __main__.py  truckdevil.py
truckdevil/j1939/: j1939.py
truckdevil/libs/: command.py  device.py  ecu.py  pretty_shim.py  settings.py
truckdevil/modules/: ecu_discovery.py  j1939_fuzzer.py  read_messages.py  send_messages.py  template.py
